fixing spacing in prize section.

--- a/styles.css
+++ b/styles.css
@@ -274,6 +274,10 @@ section{
     line-height: 1.5; 
 }
 
+.prize{
+    font-weight: bold; 
+}
+
 .prize-container{
     background-image: linear-gradient(65deg, var(--highlight-yellow), var(--shadow-yellow));
     background-color: var(--highlight-yellow); 
@@ -291,7 +295,7 @@ section{
     width: 300px;
     border-radius: 30px;
     box-shadow: 0 2px 20px 0px var(--shadow-yellow);
-        transition: opacity .5s ease-in-out;
+    transition: opacity .5s ease-in-out;
 }
 
 .prize-name{
@@ -301,6 +305,7 @@ section{
 
 .prize-description {
     margin-top: 10px;
+    margin-bottom: 10px; 
     width: 70vw;
     line-height: 1.5;
     color: var(--main-gray); 
@@ -367,6 +372,10 @@ section{
     padding-bottom: 20px; 
 }
 
+.requirements-ul li{
+    font-size: 15px;  
+}
+
 #projects-section {
     background-image: linear-gradient(65deg, var(--main-dark), var(--main-blue));
     padding-bottom: 50px; 
@@ -400,5 +409,7 @@ section{
     .hero-graphic, .header-square{
         display: none; 
     }
-
+    .requirements-ul li {
+        font-size: 9px;
+    }
 }
